--- a/src/lib/styles/globals.css
+++ b/src/lib/styles/globals.css
@@ -4,6 +4,8 @@
   background-size: 28px 28px;
   background-repeat: no-repeat;
   background-position: center;
+  color: #111 !important;
+  font-weight: bold !important;
 }
 @tailwind base;
 @tailwind components;
